--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,8 +1,3 @@
-FROM nginx
-
-
-
-COPY index.html /usr/share/nginx/html/index.html
-
-
+FROM httpd:2.4
+COPY index.html/ /usr/local/apache2/htdocs/index.html
 EXPOSE 80
