--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: php
+  name: html
 spec:
  replicas: 3
  selector:
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: php-service
+  name: html-service
 spec:
   type: NodePort
   selector:
