--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: html
+  name: htmlweb
 spec:
  replicas: 3
  selector:
    matchLabels:
-     app: php-app
+     app: web-app
  template:
    metadata:
      labels:
-       app: php-app
+       app: web-app
    spec:                  
      containers:
-     - name: php-app
+     - name: web-app
        image: vigneshvicky12345/maven
        imagePullPolicy: Always
        ports:
@@ -26,8 +26,8 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: php-app
+    app: web-app
   ports:
-    - port: 8089
+    - port: 8084
       protocol: TCP
       targetPort: 80
