--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: html-service
+  name: htmlweb-service
 spec:
   type: NodePort
   selector:
