--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=node-test-app
+sonar.projectKey=node-app
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.organization=default
