--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -26,7 +26,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: web-app
+    app: demo-app
   ports:
     - port: 8086
       protocol: TCP
